--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <nav class="cover-navigation cover-navigation--primary">
         <ul class="navigation">
           <li class="navigation__item"><a href="https://www.facebook.com/nhathyy.ins/" ><i class="fab fa-facebook" aria-hidden="true"></i> FACEBOOK</a></li>
-          <li class="navigation__item"><a href="https://m.me/WusThanhDieu"><i class="fab fa-facebook-messenger"></i> MESSENGER</a></li>
+          <li class="navigation__item"><a href="https://m.me/nhathyy.ins"><i class="fab fa-facebook-messenger"></i> MESSENGER</a></li>
         </ul>
       </nav>
     </div>
